--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BackEndAPIContext": "Host=dpg-d4b0mljuibrs73fe78bg-a;Port:5432;Username=postgres_user;Password=Z6RaTNMkzSLARfkePWOzcsccKPEWyNND;database=apicontext"
+    "BackEndAPIContext": "Server=localhost;Port:5432;Username=postgres;Password=admin;database=apicontext"
   }
 }
