--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BackEndAPIContext": "Server=localhost;Port:5432;Username=postgres;Password=admin;database=apicontext"
+    "BackEndAPIContext": "server=localhost;username=postgres;password=admin;database=BackEndAPIContext"
   }
 }
