Fix: flaging trust server

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BackEndAPIContext": "Host=postgresql://postgresuser:a4Ekf8mMHiflTVd2rHQS1EZNmE2gSNa6@dpg-d4bp926uk2gs73de3qng-a/apidb_2m9n;Port=5432;Username=postgresuser;Password=a4Ekf8mMHiflTVd2rHQS1EZNmE2gSNa6;Database=apidb_2m9n"
+    "BackEndAPIContext": "Host=postgresql://postgresuser:a4Ekf8mMHiflTVd2rHQS1EZNmE2gSNa6@dpg-d4bp926uk2gs73de3qng-a/apidb_2m9n;Port=5432;Database=apidb_2m9n;Username=postgresuser;Password=a4Ekf8mMHiflTVd2rHQS1EZNmE2gSNa6;SSL Mode=Require;Trust Server Certificate=true"
   }
 }
